# gnome-5250

./: AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  NEWS  README  TODO  acconfig.h  autogen.sh  c-header  configure.in  gnome-5250.c  gtk-5250.c  gtk5250propdlg.c  gtk5250propdlg.h  gtk5250terminal.c  gtk5250terminal.h  mkinstalldirs
