
if GNOME
GNOMEPROGRAMS		= gnome-5250
endif

bin_PROGRAMS		= gtk-5250\
			  $(GNOMEPROGRAMS)

gnome_5250_SOURCES	= gnome-5250.c\
			  gtk5250propdlg.c\
			  gtk5250terminal.c

gtk_5250_SOURCES	= gtk-5250.c\
			  gtk5250propdlg.c\
	                  gtk5250terminal.c

noinst_HEADERS		= gtk5250propdlg.h\
			  gtk5250terminal.h

EXTRA_DIST		= c-header
