dnl Process this file with autoconf to produce a configure script.
AC_INIT(gnome-5250.c)
AM_INIT_AUTOMAKE(gnome-5250,0.2)

dnl Checks for programs.
AC_PROG_CC

dnl *
dnl * Checks for lib5250 and lib5250 features.
dnl *
AC_PATH_PROG(TN5250_CONFIG,pkg-config,no)
if test x$TN5250_CONFIG = xno ; then
	AC_MSG_ERROR(** Can't find pkg-config.  Is pkg-config installed? **)
fi
AC_MSG_CHECKING(for lib5250 C flags)
TN5250_CFLAGS="`$TN5250_CONFIG --cflags tn5250`"
CFLAGS="$CFLAGS $TN5250_CFLAGS"
AC_MSG_RESULT($TN5250_CFLAGS)
AC_MSG_CHECKING(for lib5250 libs)
TN5250_LIBS="`$TN5250_CONFIG --libs tn5250`"
LIBS="$LIBS $TN5250_LIBS"
AC_MSG_RESULT($TN5250_LIBS)

AM_MAINTAINER_MODE

dnl Checks for libraries.
AM_PATH_GTK_2_0(2.0.0,,AC_MSG_ERROR(gnome-5250 needs GTK+ 2.0))

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_HEADER_STDC

dnl *
dnl * Make a PKGDATADIR define so we can find our icon.
dnl *
eval PKGDATADIR="$datadir"
eval PKGDATADIR="$PKGDATADIR"
eval PKGDATADIR="`echo "$PKGDATADIR" |sed 's%^NONE%/usr/local%'`"
AC_DEFINE_UNQUOTED(PKGDATADIR,"$PKGDATADIR")

AC_OUTPUT(Makefile)
